z-index fixed

--- a/searchBar/searchBar.css
+++ b/searchBar/searchBar.css
@@ -44,7 +44,7 @@
 
 #eexcess_close {
     position: absolute;
-    z-index: 99999;
+    z-index: 2147483647;
     width: 35px;
     height: 35px;
     top: -19px;
@@ -58,7 +58,7 @@
     height: 70%;
     bottom: 20px;
     right: 0px;
-    z-index: 99999;
+    z-index: 2147483647;
     border: none;
     background: none;
 }
@@ -86,7 +86,7 @@
 #eexcess-tabBar-iframeCover {
     position: absolute;
     opacity: 50;
-    z-index: 999999;
+    z-index: 2147483647;
     width: 100%;
     height: 100%;
 }
@@ -448,7 +448,7 @@
     -webkit-writing-mode: horizontal-tb;
     x: 0px;
     y: 0px;
-    z-index: 99999;
+    z-index: 2147483647;
     zoom: 1;
 }
 
